--- a/templates/custom-finish.html
+++ b/templates/custom-finish.html
@@ -13,42 +13,45 @@
   <body>
     <div class="overlay">
       <div class="icons">
-        <a href="{{ url_for('custom') }}"><i class="icon">💅🏻</i></a>
-        <a href="{{ url_for('login') }}" style="text-decoration: none"
-          ><i class="icon">👤</i></a
-        >
-        <a href="{{ url_for('checkout') }}" style="text-decoration: none"
-          ><i class="icon">🛒</i></a
-        >
-        <a href="{{ url_for('home') }}"><i class="icon">🏠</i></a>
+        <a href="{{ url_for('custom') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/nail-white.png') }}"
+            class="icon"
+            alt="Custom"
+        /></a>
+        <a href="{{ url_for('login') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/user-white.png') }}"
+            class="icon"
+            alt="Login"
+        /></a>
+        <a href="{{ url_for('checkout') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/cart-white.png') }}"
+            class="icon"
+            alt="Cart"
+        /></a>
+        <a href="{{ url_for('home') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/home-white.png') }}"
+            class="icon"
+            alt="Home"
+        /></a>
       </div>
 
       <h1>Nail It Your Way!</h1>
 
       <div class="menu">
-        <a href="{{ url_for('instructions') }}"><div class="menu-item">
-          <img
-            src="../static/images/Custom/Home/instructions.png"
-            alt="Instructions"
-          />
-          <p>Add Instructions</p>
-        </div></a>
-        <a href="{{ url_for('add_custom') }}"
+        <a href="{{ url_for('instructions') }}"
           ><div class="menu-item">
             <img
-              src="../static/images/Custom/Home/saved.png"
-              alt="Save Design"
+              src="../static/images/Custom/Home/instructions.png"
+              alt="Instructions"
             />
-            <p>Save Design</p>
+            <p>Add Instructions</p>
           </div></a
         >
-        <div class="menu-item">
-          <img
-            src="../static/images/Custom/Home/share.png"
-            alt="Share Design"
-          />
-          <p>Share Design</p>
-        </div>
+
         <a href="{{ url_for('add_custom_cart') }}"
           ><div class="menu-item">
             <img
