--- a/templates/customer_upload.html
+++ b/templates/customer_upload.html
@@ -14,6 +14,32 @@
   <body>
     <header>
       <h1>Place a Custom Order</h1>
+            <div class="icons">
+        <a href="{{ url_for('custom') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/nail-white.png') }}"
+            class="icon"
+            alt="Custom"
+        /></a>
+        <a href="{{ url_for('login') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/user-white.png') }}"
+            class="icon"
+            alt="Login"
+        /></a>
+        <a href="{{ url_for('checkout') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/cart-white.png') }}"
+            class="icon"
+            alt="Cart"
+        /></a>
+        <a href="{{ url_for('home') }}"
+          ><img
+            src="{{ url_for('static', filename='images/icons/home-white.png') }}"
+            class="icon"
+            alt="Home"
+        /></a>
+      </div>
     </header>
 
     <div class="container">
