--- a/templates/products.html
+++ b/templates/products.html
@@ -22,7 +22,7 @@
         /></a>
         <a href="{{ url_for('admin') }}"
           ><img
-            src="{{ url_for('static', filename='images/icons/Home Icon 50.png') }}"
+            src="{{ url_for('static', filename='images/icons/home-black.png') }}"
             class="icon"
             alt="Login"
         /></a>
