--- a/templates/custom-shape.html
+++ b/templates/custom-shape.html
@@ -9,12 +9,14 @@
   <body>
     <div class="main-container">
       <!-- Left Side: Bottles -->
-      <div class="left-section"><h1>Nail It Your Way</h1></div>
+      <div class="left-section"><h1></h1></div>
 
       <!-- Right Side: Shape Circle -->
       <div class="right-section">
         <form method="POST" action="{{ url_for('save_shape') }}" id="shapeForm">
+                      <h1>Nail It Your Way</h1>
           <div class="wheel-container">
+
             <div class="circle-container" id="circle">
               <div class="shape center">Choose Shape</div>
 
