--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <img
-        src="../static/images/image.png"
-        class="main-image"
-        alt="Hero Image"
-      />
+      <div class="main-image"></div>
       <a href="{{ url_for('home') }}">
         <div class="button-container">
           <div class="button-bg"></div>
