--- a/static/css/custom-shape.css
+++ b/static/css/custom-shape.css
@@ -101,8 +101,8 @@ h1 {
 
 .shape {
   position: absolute;
-  width: 15vh;
-  height: 15vh;
+  width: 13vh;
+  height: 18vh;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
@@ -110,7 +110,7 @@ h1 {
   justify-content: center;
   font-size: 0.7rem;
   text-align: center;
-  transform: rotate(calc(60deg * var(--i))) translate(25vh);
+  transform: rotate(calc(60deg * var(--i))) translate(30vh);
   opacity: 1;
   transition: opacity 0.3s, transform 0.3s;
   cursor: pointer;
@@ -118,9 +118,9 @@ h1 {
 
 @media (max-width: 768px) {
   .shape {
-    width: 14vw;
-    height: 14vw;
-    transform: rotate(calc(60deg * var(--i))) translate(34vw);
+    width: 20vw;
+    height: 28vw;
+    transform: rotate(calc(60deg * var(--i))) translate(40vw);
     font-size: 0.6rem;
   }
 }
@@ -128,13 +128,13 @@ h1 {
 .shape img {
   width: 100%;
   height: 100%;
-  border-radius: 4rem;
+  border-radius: 1rem;
   object-fit: cover;
 }
 
 .shape.center {
   position: relative;
-  background-color: #e91e63;
+  background-color: #d07b91;
   font-weight: bold;
   width: 8rem;
   height: 8rem;
@@ -146,12 +146,10 @@ h1 {
   border: none;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s;
-  box-shadow: 0 0 15px rgba(233, 30, 99, 0.6);
 }
 
 .shape.center:hover {
-  background-color: #c2185b;
-  transform: scale(1.05);
+  cursor: default;
 }
 
 .shape.dimmed {
@@ -160,8 +158,7 @@ h1 {
 }
 
 .shape.selected {
-  border: 2px solid #e91e63;
-  box-shadow: 0 0 10px #e91e63;
+
   opacity: 1;
   filter: none;
 }
@@ -169,17 +166,17 @@ h1 {
 .sb-btn {
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  border-radius: 50%;
-  height: 10vh;
-  border: 2px solid #e91e63;
-  box-shadow: 0 0 10px #e91e63;
-  background-color: #e91e63;
+  border-radius: 20%;
+  height: 5vh;
+  border: 2px solid #d07b91;
+  box-shadow: 0 0 10px #d07b91;
+  background-color: #d07b91;
   color: white;
+  margin-top: 5rem;
 }
 
 .sb-btn:hover {
-  background-color: #c2185b;
-  transform: scale(1.05);
+
   cursor: pointer;
 }
 
