--- a/templates/custom-colour.html
+++ b/templates/custom-colour.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main-container">
       <!-- Left Side: Bottles -->
-      <div class="left-section"><h1>Nail It Your Way</h1></div>
+      <div class="left-section"><h1></h1></div>
 
       <!-- Right Side: Shape Circle -->
       <div class="right-section">
@@ -18,6 +18,7 @@
           action="{{ url_for('save_colour') }}"
           id="shapeForm"
         >
+        <h1>Nail It Your Way</h1>
           <div class="wheel-container">
             <div class="circle-container" id="circle">
               <div class="shape center">Choose Colour</div>
@@ -63,7 +64,7 @@
 
           <!-- Submit Button -->
           <div class="sb">
-            <button type="submit" class="sb-btn">Submit Shape</button>
+            <button type="submit" class="sb-btn">Submit Colour</button>
           </div>
         </form>
       </div>
