--- a/templates/home.html
+++ b/templates/home.html
@@ -55,9 +55,8 @@
               <img src="{{ product['image'] }}" alt="Nail Design" />
               <div class="card-footer">
                 <button
-                  class="buy-btn"
+                  class="buy-btn buy"
                   onclick="window.location.href='{{ url_for('add_to_cart', pid=product['_id']) }}'"
-                  id="buy"
                 >
                   Buy Now for ₹{{ product['price'] }}&nbsp;
                   <span class="cart">🛒</span>
@@ -72,11 +71,11 @@
     </main>
   </body>
   <script>
-    document
-      .getElementById("buy")
-      .addEventListener("click", function (e) {
-        const hiddenInput = document.getElementById("selectedShapeInput");
-        alert("Item Added to Cart")
+    const buyButtons = document.querySelectorAll(".buy");
+    buyButtons.forEach((button) => {
+      button.addEventListener("click", function (e) {
+        alert("Item Added to Cart");
       });
+    });
   </script>
 </html>
