--- a/static/css/custom-colour.css
+++ b/static/css/custom-colour.css
@@ -19,9 +19,11 @@ body {
 }
 
 h1 {
-  color: #c14468;
+  color: white;
   font-family: "Fredericka the Great", cursive;
-  font-size: 5rem;
+  font-size: 4rem;
+  padding-bottom: 4.5rem;
+  padding-left: 4rem;
 }
 
 /* Stack sections vertically on small screens */
@@ -110,7 +112,10 @@ h1 {
   justify-content: center;
   font-size: 0.7rem;
   text-align: center;
-  transform: rotate(calc(60deg * var(--i))) translate(30vh);
+  transform: rotate(calc(60deg * var(--i))) translate(16vw) rotate(100deg);
+
+
+
   opacity: 1;
   transition: opacity 0.3s, transform 0.3s;
   cursor: pointer;
@@ -120,8 +125,14 @@ h1 {
   .shape {
     width: 20vw;
     height: 28vw;
-    transform: rotate(calc(60deg * var(--i))) translate(40vw);
+    transform: rotate(calc(60deg * var(--i))) translate(24vw) rotate(100deg);
+
     font-size: 0.6rem;
+  }
+
+  h1 {
+
+    font-size: 2rem;
   }
 }
 
@@ -158,6 +169,7 @@ h1 {
 }
 
 .shape.selected {
+
   opacity: 1;
   filter: none;
 }
