--- a/templates/products.html
+++ b/templates/products.html
@@ -53,7 +53,7 @@
             type="text"
             id="colour"
             name="colour"
-            placeholder="Colour"
+            placeholder="Collection Name"
             required
           />
           <input
