--- a/static/css/home.css
+++ b/static/css/home.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 body {
-  font-family: "Inria Serif", serif;
+  font-family: "Fredoka", sans-serif;
   background-image: url("../images/home-bg.png");
   background-repeat: no-repeat;
   background-position: top center;
@@ -93,6 +93,7 @@ a {
 .collection h2 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  color: white;
 }
 
 .gallery-container {
