--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,9 +1,10 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: 'Inria Serif', serif;
+  font-family: "Inria Serif", serif;
   overflow: hidden;
 }
 
@@ -20,7 +21,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../images/image.png');
+  background-image: url("../images/image.png");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: contain;
@@ -42,7 +43,7 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: rgba(208, 123, 145, 1);
-  border-radius: 12px;
+  /* border-radius: 12px; */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -51,7 +52,7 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.2rem;
+  font-size: 1.9rem;
   font-weight: 600;
   color: white;
   pointer-events: none;
@@ -62,13 +63,16 @@ html, body {
   .main-image {
     background-size: cover;
     background-position: center center;
+    background-image: url("../images/bg.png");
   }
 
   .button-container {
+    position: absolute;
+    bottom: 7.5rem;
     height: 48px;
   }
 
   .button-text {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
