--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Fredoka", sans-serif;
+  font-family: "Orelega One";
   background: #fbb8cc url("auth-background.png") no-repeat right bottom;
   background-size: contain;
   display: flex;
