--- a/templates/custom-colour.html
+++ b/templates/custom-colour.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nail Polish Selector</title>
     <link rel="stylesheet" href="../static/css/custom-shape.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main-container">
@@ -18,7 +22,7 @@
           action="{{ url_for('save_colour') }}"
           id="shapeForm"
         >
-        <h1>Nail It Your Way</h1>
+          <h1>Nail It Your Way</h1>
           <div class="wheel-container">
             <div class="circle-container" id="circle">
               <div class="shape center">Choose Colour</div>
