--- a/static/css/custom-finish.css
+++ b/static/css/custom-finish.css
@@ -91,9 +91,11 @@ h1 {
 }
 
 .menu-item p {
-  font-weight: bold;
+  padding-bottom: 2rem;
+  font-weight: 400;
   color: #b44666;
   font-size: 2rem;
+  font-family: Lancelot;
 }
 
 .arrow-btn {
