--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,6 +15,7 @@ a {
   text-decoration: none;
 }
 
+
 .overlay {
   /* background-color: rgba(255, 255, 255, 0.8); */
   min-height: 100vh;
@@ -93,9 +94,10 @@ h1 {
 
 .menu-item p {
   padding-bottom: 2rem;
-  font-weight: bold;
+  font-weight: 400;
   color: #b44666;
   font-size: 2rem;
+  font-family: Lancelot;
 }
 
 .arrow-btn {
