--- a/static/css/order-done.css
+++ b/static/css/order-done.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Fredoka", sans-serif;
+  font-family: "Orelega One";
   background: #fbb8cc
     url("{{ url_for('static', filename='images/confirmation-bg.png') }}")
     no-repeat right bottom;
